Bug 361823 - I missed all my bookmarks after upgrade to KDE Applications 16.03.90
Summary: I missed all my bookmarks after upgrade to KDE Applications 16.03.90
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-15 17:19 UTC by Juan R. Rodriguez
Modified: 2016-06-25 11:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juan R. Rodriguez 2016-04-15 17:19:37 UTC
After upgrade KRDC version 15.12.3 to version 16.03.90 I don't have any of my bookmarks and don't know how to import / convert them.

Reproducible: Didn't try



Expected Results:  
All my bookmarks from the previus version be imported automatically.
Comment 1 Urs Wolfer 2016-04-16 09:36:50 UTC
@Juan R. Rodriguez: All settings from other KDE applications are still available?
Comment 2 Urs Wolfer 2016-04-16 09:38:59 UTC
@jpwhiting: You have worked on the migration stuff. Do you have any idea here?
Comment 3 Juan R. Rodriguez 2016-04-19 12:35:54 UTC
(In reply to Urs Wolfer from comment #1)
> @Juan R. Rodriguez: All settings from other KDE applications are still
> available?

Hi, yes, as I can see, all is fine except for KRDC.
Comment 4 brancaleone 2016-04-20 14:02:53 UTC
Hello, i had the same problem ; i resolved it by moving bookmarks.xml from kde4 specific location to the new krdc config location :

cp ~/.kde4/share/apps/krdc/bookmarks.xml  ~/.local/share/krdc/bookmarks.xml
Comment 5 Juan R. Rodriguez 2016-04-20 16:15:53 UTC
(In reply to brancaleone from comment #4)
> Hello, i had the same problem ; i resolved it by moving bookmarks.xml from
> kde4 specific location to the new krdc config location :
> 
> cp ~/.kde4/share/apps/krdc/bookmarks.xml  ~/.local/share/krdc/bookmarks.xml

Hi, thank you very much for your help. It worked!
You can copy your "host preferences" the same way:

cp ~/.kde4/share/apps/krdc/hostpreferences.xml  ~/.local/share/krdc/hostpreferences.xml
Comment 6 Wolfgang Bauer 2016-06-24 12:52:57 UTC
I can confirm this issue with the latest version (16.04.2).

The migrator copies the bookmarks to ~/.local/share/krdcbookmarks.xml, but krdc expects them in  ~/.local/share/krdc/bookmarks.xml.

So apparently there's a '/' missing somewhere...
Comment 7 Wolfgang Bauer 2016-06-24 13:22:10 UTC
This fixes it:
https://git.reviewboard.kde.org/r/128281/
Comment 8 Wolfgang Bauer 2016-06-25 11:14:46 UTC
Git commit 7d9ad0152dbc47c30f261c9d4c026e01bea31b7d by Wolfgang Bauer.
Committed on 25/06/2016 at 11:12.
Pushed by wbauer into branch 'Applications/16.04'.

Fix bookmarks migration from the KDE4 version

targetBasePath needs a trailing slash because the file name is appended
afterwards.
FIXED-IN: 16.04.3
REVIEW: 128281

M  +1    -1    main.cpp

http://commits.kde.org/krdc/7d9ad0152dbc47c30f261c9d4c026e01bea31b7d