Fix bookmarks migration from the KDE4 version

targetBasePath needs a trailing slash because the file name is appended
afterwards.

BUG: 361823
FIXED-IN: 16.04.3
REVIEW: 128281